kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  labels:
    name: cluster-ingress
spec:
  rules:
  - host: sockshop.abiolarotimi.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end
            port: 
              number: 80
  - host: phonie.abiolarotimi.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: airtime-service
            port: 
              number: 80
  - host: graf.abiolarotimi.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port: 
              number: 80
  - host: prom.abiolarotimi.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus
            port: 
              number: 9090
  - host: loki.abiolarotimi.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: loki
            port: 
              number: 9200
